plyr 0.1.2 (2008-XX-XX) ---------------------------------------------------

  * drop. -> .drop
  * r*ply now work with ...
  * use inherits instead of is so method package doesn't need to be loaded
  * fix bug with using formulas

plyr 0.1.1 (2008-10-08) ---------------------------------------------------

  * argument names now start with . (instead of ending with it) - this should prevent name clashes with arguments of the called function 
  * return informative error if .fun is not a function
  * use full names in all internal calls to avoid argument name clashes