@@ -1,5 +1,6 @@
 plyr 0.1.2 (2008-XX-XX) ---------------------------------------------------
 
+  * a*ply now works correctly with array-lists
   * drop. -> .drop
   * r*ply now work with ...
   * use inherits instead of is so method package doesn't need to be loaded
